--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ requests = "2.26.0"
 flake8 = "3.9.2"
 flake8-docstrings = "1.6.0"
 pytest = "6.2.5"
+mypy = "^0.931"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
